# peridot-pbr-test

./: .gitignore  Cargo.toml  ndf.py  peridot.toml
assets/background/: .gitkeep
assets/shaders/: Makefile  equirectangular_to_cubemap.csh  irradiance_convolution.csh  pbr.csh  precompute_env_brdf.csh  prefilter_env.csh  skybox.csh  specular_prefilter_common.glsl  unlit_colored.csh  unlit_colored_ext.csh
src/: lib.rs  mesh.rs  staging.rs  ui.rs
