[package]
name = "peridot-pbr-test"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
use-std-freetype = ["peridot-vg/use-freetype", "peridot-vg/use-fontconfig"]
debug = ["peridot/debug"]

[dependencies]
peridot = { path = "../peridot/base", features = ["mt"] }
bedrock = { git = "https://github.com/Pctg-x8/bedrock", branch = "peridot", features = [
    "Multithreaded",
] }
peridot-vertex-processing-pack = { path = "../peridot/modules/vertex-processing-pack" }
peridot-vg = { path = "../peridot/modules/vg" }
peridot-image = { path = "../peridot/modules/image" }
peridot-command-object = { path = "../peridot/modules/command-object", features = [
    "memory-manager-interop",
] }
peridot-memory-manager = { path = "../peridot/modules/memory-manager" }
euclid = "0.19"
rayon = "1.5"
half = "1.8"
async-std = "1.7"
futures-util = "0.3"
